@@ -500,14 +500,14 @@ layout of the pages on each output page:</P>
 	<LI><CODE>-o number-up-layout=tbrl</CODE>; Top to bottom, right to left</LI>
 </UL>
 
-<H3><A NAME="FITPLOT">Scaling to Fit</A></H3>
+<H3><A NAME="FIT_TO_PAGE">Scaling to Fit</A></H3>
 
-<P>The <CODE>-o fitplot</CODE> option specifies that the document
+<P>The <CODE>-o fit-to-page</CODE> option specifies that the document
 should be scaled to fit on the page:</P>
 
 <PRE CLASS="command">
-lp -o fitplot filename
-lpr -o fitplot filename
+lp -o fit-to-page filename
+lpr -o fit-to-page filename
 </PRE>
 
 <P>The default is to use the size specified in the file.</P>
