@@ -2146,7 +2146,13 @@ supported. The default value is 10.
 <p>The document-count attribute specifies the number of documents that
 are present in the job.
 
-<h4><a name="fitplot">fitplot (boolean)</a></h4>
+<h4><a name="fit-to-page">fit-to-page (boolean)</a><span class="info">CUPS 1.4</span></h4>
+
+<p>The fit-to-page attribute specifies whether to scale documents to fit on the
+selected media (fit-to-page=true) or use the physical size specified in the
+document (fit-to-page=false). The default value is false.
+
+<h4><a name="fitplot">fitplot (boolean)</a><span class="info">Deprecated</span></h4>
 
 <p>The fitplot attribute specifies whether to scale HP-GL/2 plot files to
 fit on the selected media (fitplot=true) or use the physical scale specified
